Removed the .is-visible tag selector block as it no longer exists

--- a/css/screen.css
+++ b/css/screen.css
@@ -270,10 +270,6 @@ audio {
   display: none;
 }
 
-.is-visible {
-  display: block;
-}
-
 @media screen and (min-width: 380px) {
   body {
     padding-left: 11.842105%; /* 45/380 */
